[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Graphics/Player/Shoot/shoot_0001.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Player/Shoot/shoot_0000.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Player/Shoot/shoot_0002.png" type="Texture" id=3]
[ext_resource path="res://LivingEntities/Player/PlayerAnimation.tres" type="SpriteFrames" id=5]
[ext_resource path="res://Bullets/PlayerBullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://LivingEntities/Player/PlayerController.gd" type="Script" id=7]
[ext_resource path="res://LivingEntities/Player/PlayerCollision.tres" type="Shape2D" id=8]
[ext_resource path="res://ShakeCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Graphics/Player/Shoot/shootBackground_0001.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Player/Shoot/shootBackground_0000.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Player/Shoot/shootBackground_0002.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 102, 96.271 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "shoot",
"speed": 7.5
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 7.5
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "shoot",
"speed": 7.5
} ]

[node name="PlayerController" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 1.8429, -8.07056 )
z_index = 1
collision_layer = 2
script = ExtResource( 7 )
maxHealth = 100
Bullet = ExtResource( 6 )

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
frames = ExtResource( 5 )
animation = "idle"
playing = true

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( -8.69995, 9.65002 )
shape = ExtResource( 8 )

[node name="RollCollision" type="CollisionShape2D" parent="."]
position = Vector2( -8.69138, 102.914 )
shape = SubResource( 1 )
disabled = true

[node name="PlayerArm" type="AnimatedSprite" parent="."]
position = Vector2( -0.756107, -79.5663 )
frames = SubResource( 2 )
animation = "idle"
playing = true
offset = Vector2( 95, -2 )

[node name="ArmBackground" type="AnimatedSprite" parent="PlayerArm"]
z_index = -1
frames = SubResource( 3 )
animation = "idle"
offset = Vector2( 95, -2 )

[node name="Position2D" type="Position2D" parent="PlayerArm"]
position = Vector2( 228.949, -17.9669 )

[node name="GunCooldown" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ShakeCamera" parent="." instance=ExtResource( 9 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
[connection signal="shoot" from="." to="ShakeCamera" method="_on_PlayerController_shoot"]
[connection signal="animation_finished" from="PlayerAnimation" to="." method="_on_roll_finished"]
[connection signal="animation_finished" from="PlayerArm" to="." method="_on_shoot_finished"]
[connection signal="timeout" from="GunCooldown" to="." method="_on_GunCooldown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
